<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main_Menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainMenu"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/main_title"
        android:fontFamily="@font/roboto_bold"
        android:textSize="50sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/air_quality_button"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="90dp"
        android:text="@string/air_quality_title"
        android:textColor="@android:color/background_light"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16sp"
        android:backgroundTint="@color/malibu_blue1"
        android:textStyle="bold" />

    <Button
        android:id="@+id/emergency_button"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="300dp"
        android:text="@string/emergency_title"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@color/pacific_blue2"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />

    <Button
        android:id="@+id/inhaler_button"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="400dp"
        android:text="@string/inhaler_title"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@color/cobalt_blue3"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />

    <Button
        android:id="@+id/countdown_button"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:text="@string/countdown_title"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@color/prussian_blue4"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />

</RelativeLayout>