<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id = "@+id/pollution_popup">

    <TextView
        android:id="@+id/list_of_areas_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="852dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="0dp"
        android:text=""
        android:autoSizeTextType="none"
        android:background="@drawable/pollution_popup_border"
        android:clickable="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="15dp" />


</RelativeLayout>