<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InhalerMenu"
    tools:layout_editor_absoluteY="81dp"
    android:id="@+id/inhaler_use_menu">

    <TextView
        android:id="@+id/inhaler_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/inhaler_title"
        android:textSize="50sp"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />

    <Button
        android:id="@+id/check_calendar"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="150dp"
        android:text="@string/check_calendar_title"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:backgroundTint="@color/malibu_blue1"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />

    <Button
        android:id="@+id/check_prescription_details"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="150dp"
        android:text="@string/check_prescription_title"
        android:textColor="@android:color/background_light"
        android:backgroundTint="@color/pacific_blue2"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold" />

</RelativeLayout>